crates/rome_formatter/tests/specs/prettier/js/decorators/multiple.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: multiple.js

---
# Input
```js
const dog = {
  @readonly
  @nonenumerable
  @doubledValue
  legs: 4,

  @readonly
  @nonenumerable
  @doubledValue
  eyes: 2
};

const foo = {
  @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName: "A very long string as value"
};

```

# Output
```js
const dog = {

@readonly
  @nonenumerable
  @doubledValue
  legs: 4,

@readonly
  @nonenumerable
  @doubledValue
eyes: 2;
}

const foo = {
@multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName: "A very long string as value";
}

```

# Errors
```
error[SyntaxError]: expected a property, a shorthand property, a getter, a setter, or a method but instead found '@'
  ┌─ multiple.js:2:3
  │
2 │   @readonly
  │   ^ Expected a property, a shorthand property, a getter, a setter, or a method here

error[SyntaxError]: expected an expression but instead found '@'
  ┌─ multiple.js:7:3
  │
7 │   @readonly
  │   ^ Expected an expression here

error[SyntaxError]: expected a statement but instead found '}'
   ┌─ multiple.js:11:1
   │
11 │ };
   │ ^ Expected a statement here

error[SyntaxError]: expected a property, a shorthand property, a getter, a setter, or a method but instead found '@'
   ┌─ multiple.js:14:3
   │
14 │   @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName: "A very long string as value"
   │   ^ Expected a property, a shorthand property, a getter, a setter, or a method here

error[SyntaxError]: expected a statement but instead found '}'
   ┌─ multiple.js:15:1
   │
15 │ };
   │ ^ Expected a statement here


```


